2008-03-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/textdialog.cpp, src/gui/textdialog.h: Replaced the basic
	guichan text field class with our derivate class.
	
2008-02-27  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp, src/net/gamehandler/player.cpp,
	src/net/gamehandler/player.h, src/net/protocol.h: Implemented player
	respawn.

2008-02-27  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* po/da.po, po/pt.po, po/ru.po, po/sv.po, po/tmw-da.po,
	po/tmw-pt.po, po/tmw-ru.po, po/tmw-sv.po, tmw.cbp: Fixed translation
	file names.
	* po/it.po: Some fixes by Shaili.

2008-02-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/skill.cpp, src/gui/skill.h: Optical enhancements based on
	a patch by rodge.
	* src/net/playerhandler.cpp: Fixed a bug which caused an incorrect
	display of character correction points in some situations.

2008-02-23  Philipp Sehmisch  <tmw@crushnet.org>

	* data/monsters.xml: Added a 2nd attack to the scorpion to test new
	monster AI.

2008-02-22  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/skill.cpp, src/localplayer.cpp, src/localplayer.h:
	Implemented skill name display in skill dialog and xp messages (based
	on a patch by rodge)
	* src/gui/char_select.cpp, src/gui/char_select.h, src/player.h:	Merged
	creation of female characters from Legend of Mazzeroth.
	* src/net/beinghandler.cpp, src/net/charserverhandler.cpp,
	src/player.cpp, src/player.h, src/resources/itemdb.cpp,
	src/resources/iteminfo.cpp, src/resources/iteminfo.h: Handling gender
	with an enum everywhere.

2008-02-21  Philipp Sehmisch  <tmw@crushnet.org>

	* data/items.xml: Gave the hair sprites and the player sprite the
	item types "hairstyle" and "racesprite". added some missing item
	types.
	* data/monsters.xml: Added attack properties to scorpions.
	* src/gui/gui.cpp: Showing a visible error message to the user when
	the font file can't be found.
	
2008-02-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>
